--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-numpy==1.18.5
-streamlit==0.69.0
-plotly==4.0.0
-seaborn==0.10.1
-pandas_profiling==2.3.0
-pandas==1.0.5
-matplotlib==3.3.0
-scikit_learn==0.24.1
+pip install numpy==1.18.5
+pip install streamlit==0.69.0
+pip install plotly==4.0.0
+pip install seaborn==0.10.1
+pip install pandas_profiling==2.3.0
+pip install pandas==1.0.5
+pip install matplotlib==3.3.0
+pip install scikit_learn==0.24.1
